refactor(ctl): add and handle pid within axis node dir